@@ -7,7 +7,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 public class JpaTaskRepositoryAdapter implements TaskRepositoryPort {
@@ -33,7 +32,7 @@ public class JpaTaskRepositoryAdapter implements TaskRepositoryPort {
 
     @Override
     public List<Task> findAll() {
-        return jpaTaskRepository.findAll().stream().map(TaskEntity::toDomainModel).collect(Collectors.toList());
+        return jpaTaskRepository.findAll().stream().map(TaskEntity::toDomainModel).toList();
     }
 
     @Override
